--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build && rm build/static/js/*.map && rm build/static/css/*.map && firebase deploy",
+    "build": "CI=false && react-scripts build && rm build/static/js/*.map && rm build/static/css/*.map",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
